EXTRA_DIST = \
 cfh12k.cc   ctiomos2.cc   intwfc.cc     kpnot1ka.cc  nttsusi.cc  vltisaac.cc \
 cfhtmos.cc  esodanish.cc  jkt.cc        lick1m.cc    swarp.cc    whtwfc.cc   macho.cc \
 ctio1p5.cc  hstacs.cc     keckIIesi.cc  megacam.cc   skymaker.cc tng.cc      wiyns2kb.cc \
 ctiobtc.cc  hstwfpc2.cc   keckIlris.cc  not.cc       vltfors.cc  yaloandicam.cc

