CLEANFILES = *~
MAINTAINERCLEANFILES = \
	Makefile.in stamp-*

EXTRA_DIST = \
	cfh12k.cc \
	cfhtmos.cc \
	ctio1p5.cc \
	ctiobtc.cc \
	ctiomos2.cc \
	esodanish.cc \
	hawk.cc \
	hstacs.cc \
	hstwfpc2.cc \
	intwfc.cc \
	jkt.cc \
	keckIIesi.cc \
	keckIlris.cc \
	kpnot1ka.cc \
	lick1m.cc \
	macho.cc \
	magellanmegacam.cc \
	megacam.cc \
	niri.cc \
	notalfosc.cc \
	notmosca.cc \
	nttsusi.cc \
	skymaker.cc \
	snifs.cc \
	swarp.cc \
	tng.cc \
	vltfors.cc \
	vltisaac.cc \
	vlthawki.cc \
	whtwfc.cc \
	wiyns2kb.cc \
	yaloandicam.cc
